--- a/res/layout/activity_share_my_location.xml
+++ b/res/layout/activity_share_my_location.xml
@@ -82,6 +82,7 @@
         android:layout_height="35dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
         android:layout_below="@id/tvOptionalMessage"
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="5dp"
