--- a/res/layout/activity_share_my_location.xml
+++ b/res/layout/activity_share_my_location.xml
@@ -55,7 +55,7 @@
         android:layout_alignRight="@+id/selectedContacts"
         android:layout_marginBottom="5dp"
         android:ems="20"
-        android:hint="Current Address"
+        android:hint="Finding location...Please return to front page"
         android:inputType="textMultiLine|textNoSuggestions|none"
         android:maxHeight="140dp"
         android:paddingBottom="4.5dp"
@@ -73,14 +73,17 @@
         android:layout_below="@+id/editCompleteMessage"
         android:layout_marginBottom="5dp"
         android:background="@drawable/button_default_style"
-        android:onClick="getContacts"
+        
+        android:onClick="getContactList"
         android:text="Select Contacts"
+        android:textSize="20sp"
         android:textColor="#FFFFFFFF" />
 
+    <!--  -->
     <TextView
         android:id="@+id/selectedContacts"
         android:layout_width="250dp"
-        android:layout_height="55dp"
+        android:layout_height="75dp"
         android:layout_alignLeft="@+id/tvOptionalMessage"
         android:layout_alignRight="@+id/tvOptionalMessage"
         android:layout_below="@+id/buttonContacts"
