--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -16,13 +16,18 @@
         android:id="@+id/menu_about"
         android:title="About"
         app:showAsAction="never"/>
+    
+    <!--  
     <item 
         android:id="@+id/menu_emergency_contacts"
         android:title="Emergency Contacts"
         app:showAsAction="never" />
+        -->
+    
+    <!--  
     <item
         android:id="@+id/menu_gesture_confirmation"
         android:title="Gesture Confirmation"
-        app:showAsAction="never" />
-        />
+        app:showAsAction="never" />-->
+        
 </menu>
