--- a/res/layout/contact_list_contacts.xml
+++ b/res/layout/contact_list_contacts.xml
@@ -27,7 +27,7 @@
         android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp"
         android:background="@drawable/button_send"
-        android:text="Ok"
+        android:text="OK"
         android:onClick="goToShareMyLocation"
         android:textColor="#FFFFFF"
         android:textStyle="bold" />
