--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -5,9 +5,9 @@
 
     <item
         android:id="@+id/action_settings"
-        android:orderInCategory="100"
         android:title="@string/action_settings"
-        app:showAsAction="never"/>
+        android:icon="@drawable/new_settings"
+        android:showAsAction="always"/>
     <item
         android:id="@+id/menu_help"
         android:title="Help"
