--- a/res/layout/help_dialog.xml
+++ b/res/layout/help_dialog.xml
@@ -26,10 +26,45 @@
             android:layout_height="wrap_content"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:text=" • Select &apos;Share My Location&apos; to send your location information to one or more friends.\n"
+            android:text="Share My Location"
             android:textColor="@color/cyan"
             android:textIsSelectable="true"
-            android:textSize="20sp" />
+            android:textSize="22sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text=" • Sends your location information to one or more friends.\n"
+            android:textColor="@color/white"
+            android:textIsSelectable="true"
+            android:textSize="19sp" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <ImageView
+                android:id="@+id/myImageView"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="5dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:src="@drawable/emergency" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/myImageView"
+                android:layout_marginLeft="5dp"
+                android:text="Emergency Button"
+                android:textColor="@color/cyan"
+                android:textSize="22sp" />
+
+        </RelativeLayout>
 
         <TextView
             android:layout_width="wrap_content"
@@ -37,19 +72,29 @@
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:text=" • Selecting the red emergency button opens a new page that allows you to specify and describe the emergency situation. "
-            android:textColor="@color/cyan"
+            android:textColor="@color/white"
             android:textIsSelectable="true"
-            android:textSize="20sp" />
-        
+            android:textSize="19sp" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:text="Note: The message will be sent to emergency personnel and emergency contacts and will require user confirmation\n"
+            android:textColor="@color/white"
+            android:textIsSelectable="true"
+            android:textSize="19sp" />
+        
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text="Settings"
             android:textColor="@color/cyan"
             android:textIsSelectable="true"
-            android:textSize="20sp" />
+            android:textSize="22sp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -57,19 +102,39 @@
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:text=" • You can add contacts to your emergency list via the in-app settings.\n"
-            android:textColor="@color/cyan"
+            android:textColor="@color/white"
             android:textIsSelectable="true"
-            android:textSize="20sp" />
+            android:textSize="19sp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:text=" • The &apos;Accuracy&apos; is an estimation of the user&apos;s location based on GPS or network connectivity.\n"
+            android:text="Location Services"
             android:textColor="@color/cyan"
             android:textIsSelectable="true"
-            android:textSize="20sp" />
+            android:textSize="22sp" />
+        
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text=" • Location services/GPS/WIFI must be enabled in order to obtain your location. "
+            android:textColor="@color/white"
+            android:textIsSelectable="true"
+            android:textSize="19sp" />
+        
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text=" • The &apos;Accuracy&apos; is an estimation of the user&apos;s location based on GPS or network connectivity.\n"
+            android:textColor="@color/white"
+            android:textIsSelectable="true"
+            android:textSize="19sp" />
     </LinearLayout>
 
 </ScrollView>
