added landscape modes to the other main activities

--- a/res/layout-land/activity_main.xml
+++ b/res/layout-land/activity_main.xml
@@ -28,6 +28,8 @@
         android:layout_above="@+id/button_share_my_location"
         android:layout_alignLeft="@id/strut"
         android:layout_alignParentTop="true"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
         android:layout_alignRight="@+id/button_emergency"
         android:gravity="left"
         android:paddingBottom="4dp"
@@ -40,13 +42,14 @@
 
     <Button
         android:id="@+id/button_emergency"
-        android:layout_width="55dp"
+        android:layout_width="150dp"
         android:layout_height="40dp"
+        android:layout_alignLeft="@+id/strut"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="2.5dp"
-        android:layout_marginLeft="2.5dp"
         android:layout_marginRight="5dp"
+        android:layout_marginLeft="5dp"
         android:background="@drawable/button_emergency"
         android:onClick="getEmergency"
         android:text="!"
@@ -58,13 +61,12 @@
         android:id="@+id/button_share_my_location"
         android:layout_width="150dp"
         android:layout_height="40dp"
-        android:layout_alignLeft="@+id/text_view_title"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="2.5dp"
-        android:layout_marginLeft="2.5dp"
-        android:layout_marginRight="2.5dp"
-        android:layout_marginTop="2.5dp"
-        android:layout_toLeftOf="@+id/button_emergency"
+        android:layout_above="@+id/button_emergency"
+        android:layout_alignRight="@+id/text_view_title"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_toRightOf="@+id/map"
         android:background="@drawable/button_share_my_location"
         android:onClick="shareMyLocation"
         android:text="@string/share_my_location"
