small tweak to landscape mode emergency class

--- a/res/layout-land/activity_emergency.xml
+++ b/res/layout-land/activity_emergency.xml
@@ -68,11 +68,9 @@
     <TextView
         android:id="@+id/editEmergencyAddress"
         android:layout_width="250dp"
-        android:layout_height="90dp"
-        android:layout_above="@+id/tvEmergencyOptionalMessage"
+        android:layout_height="100dp"
         android:layout_alignLeft="@+id/tvEmergencyOptionalMessage"
         android:layout_alignRight="@+id/dummy"
-        android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp"
         android:ems="20"
         android:hint="Current location: "
@@ -91,7 +89,8 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/dummy"
         android:layout_alignParentTop="true"
-        android:layout_marginBottom="2.5dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="5dp"
         android:background="@drawable/btn_dropdown"
         android:entries="@array/emergency_dialogs"
         android:prompt="@string/dialog_prompt"
@@ -104,10 +103,10 @@
         android:layout_above="@+id/buttonSendEmergency"
         android:layout_alignLeft="@+id/buttonSendEmergency"
         android:layout_alignRight="@+id/buttonSendEmergency"
-        android:layout_below="@+id/spinnerEmergencyDialogs"
-        android:background="@drawable/text_border"
+        android:layout_below="@+id/editEmergencyAddress"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
+        android:background="@drawable/text_border"
         android:clickable="true"
         android:ems="20"
         android:hint="Click here to add an additional message"
