--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -6,15 +6,18 @@
     <item
         android:id="@+id/action_settings"
         android:title="@string/action_settings"
-        android:icon="@drawable/new_settings"
-        android:showAsAction="always"/>
+        android:icon="@drawable/ic_action_settings"
+        android:showAsAction="always"
+        app:showAsAction="always"/>
     <item
         android:id="@+id/menu_help"
         android:title="Help"
+        android:showAsAction="never"
         app:showAsAction="never"/>
     <item
         android:id="@+id/menu_about"
         android:title="About"
+        android:showAsAction="never"
         app:showAsAction="never"/>
     
     <!--  
