--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     
-    tools:context="com.seecondev.seecon.MainActivity" >
+    tools:context="com.geobeacondev.geobeacon.MainActivity" >
      
      <TextView
          android:id="@+id/text_view_title"
