--- a/res/layout-land/activity_main.xml
+++ b/res/layout-land/activity_main.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.seecondev.seecon.MainActivity" >
+    tools:context="com.geobeacondev.geobeacon.MainActivity" >
 
     <View
         android:id="@+id/strut"
