--- a/res/layout/activity_get_contacts.xml
+++ b/res/layout/activity_get_contacts.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.seecondev.seecon.GetContacts" >
+    tools:context="com.geobeacondev.geobeacon.GetContacts" >
 
     <TextView
         android:layout_width="wrap_content"
