--- a/res/layout-land/activity_emergency.xml
+++ b/res/layout-land/activity_emergency.xml
@@ -86,7 +86,7 @@
     <Spinner
         android:id="@+id/spinnerEmergencyDialogs"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_alignLeft="@+id/dummy"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
