--- a/res/layout-land/activity_main.xml
+++ b/res/layout-land/activity_main.xml
@@ -6,7 +6,7 @@
 
     <View
         android:id="@+id/strut"
-        android:layout_width="0dp"
+        android:layout_width="60dp"
         android:layout_height="0dp"
         android:layout_centerHorizontal="true" />
 
@@ -26,11 +26,11 @@
         android:layout_width="0dp"
         android:layout_height="120dp"
         android:layout_above="@+id/button_share_my_location"
-        android:layout_alignLeft="@id/strut"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="5dp"
         android:layout_alignRight="@+id/button_emergency"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_toRightOf="@+id/strut"
         android:gravity="left"
         android:paddingBottom="4dp"
         android:paddingLeft="8dp"
@@ -44,12 +44,12 @@
         android:id="@+id/button_emergency"
         android:layout_width="150dp"
         android:layout_height="40dp"
-        android:layout_alignLeft="@+id/strut"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="2.5dp"
         android:layout_marginRight="5dp"
         android:layout_marginLeft="5dp"
+        android:layout_toRightOf="@+id/strut"
         android:background="@drawable/button_emergency"
         android:onClick="getEmergency"
         android:text="!"
