--- a/website/GeoBeacon/css/style.css
+++ b/website/GeoBeacon/css/style.css
@@ -8,11 +8,13 @@ section.module h2 {
   margin-bottom: 40px;
   font-family: "Roboto Slab", serif;
   font-size: 30px;
+  text-align: center;
 }
 section.module p {
   margin-bottom: 40px;
   font-size: 16px;
   font-weight: 300;
+  text-align: center;
 }
 section.module p:last-child {
   margin-bottom: 0;
@@ -42,7 +44,7 @@ section.module.parallax-1 {
   background-image: url("../img/scroll_images/austin_skyline.png");
 }
 section.module.parallax-2 {
-  background-image: url("../img/scroll_images/capitol.png");
+  background-image: url("../img/scroll_images/capitol2.png");
 }
 section.module.parallax-3 {
   background-image: url("../img/demo/_small/3.jpg");
