small change to emergency layout

--- a/res/layout/activity_emergency.xml
+++ b/res/layout/activity_emergency.xml
@@ -78,7 +78,7 @@
     <Spinner
         android:id="@+id/spinnerEmergencyDialogs"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_alignLeft="@+id/buttonSendEmergency"
         android:layout_alignRight="@+id/buttonSendEmergency"
         android:layout_below="@+id/editEmergencyAddress"
