--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
     <CheckBoxPreference
-        android:defaultValue="true"
+        android:defaultValue="false"
         android:key="continuousUpdates"
         android:summary="Get continuous location updates"
         android:title="Continuous Updates"
