--- a/res/layout/activity_emergency.xml
+++ b/res/layout/activity_emergency.xml
@@ -22,41 +22,6 @@
         android:textStyle="bold"
         android:text="Send (requires confirmation)" />
 
-    <!--  
-    <EditText
-        android:id="@+id/editMessageToEmergency"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/textCharactersUsedEmergency"
-        android:layout_alignLeft="@+id/spinnerEmergencyDialogs"
-        android:layout_alignRight="@+id/spinnerEmergencyDialogs"
-        android:layout_below="@+id/spinnerEmergencyDialogs"
-        android:background="@drawable/text_border"
-        android:ems="20"
-        android:gravity="top|left"
-        android:hint="Enter additional message"
-        android:inputType="textMultiLine|textNoSuggestions|none"
-        android:paddingBottom="5dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:paddingTop="5dp"
-        android:scrollbars="vertical"
-        android:textSize="22sp" />
-		-->
-
-    <!--  
-    <TextView
-        android:id="@+id/textCharactersUsedEmergency"
-        android:layout_width="250dp"
-        android:layout_height="18dp"
-        android:layout_above="@+id/buttonSendEmergency"
-        android:layout_alignLeft="@+id/buttonSendEmergency"
-        android:layout_alignRight="@+id/buttonSendEmergency"
-        android:ems="20"
-        android:inputType="textMultiLine"
-        android:maxHeight="20dp"
-        android:textSize="14sp" />
-        -->
 
     <TextView
         android:id="@+id/editEmergencyAddress"
@@ -65,7 +30,7 @@
         android:layout_alignLeft="@+id/tvEmergencyOptionalMessage"
         android:layout_alignRight="@+id/tvEmergencyOptionalMessage"
         android:ems="20"
-        android:hint="Current location: "
+        android:hint="Finding location...Please return to main page"
         android:inputType="textMultiLine|textNoSuggestions|none"
         android:maxHeight="140dp"
         android:paddingBottom="4.5dp"
