--- a/res/layout/activity_share_my_location.xml
+++ b/res/layout/activity_share_my_location.xml
@@ -55,7 +55,7 @@
         android:layout_alignRight="@+id/selectedContacts"
         android:layout_marginBottom="5dp"
         android:ems="20"
-        android:hint="Finding location...Please return to front page"
+        android:hint="Finding location...Please return to main page"
         android:inputType="textMultiLine|textNoSuggestions|none"
         android:maxHeight="140dp"
         android:paddingBottom="4.5dp"
