--- a/res/menu/emergency.xml
+++ b/res/menu/emergency.xml
@@ -5,34 +5,40 @@
 
     <item
         android:id="@+id/action_settings"
-        android:title="@string/action_settings"
         android:icon="@drawable/ic_action_settings"
         android:showAsAction="always"
+        android:title="@string/action_settings"
         app:showAsAction="always"/>
     <item
-        android:id="@+id/menu_help"
-        android:title="Help"
+        android:id="@+id/menu_getting_started"
         android:showAsAction="never"
+        android:title="Getting Started"
+        app:showAsAction="never"/>
+    <item
+        android:id="@+id/menu_help"
+        android:showAsAction="never"
+        android:title="Help"
         app:showAsAction="never"/>
     <item
         android:id="@+id/menu_about"
-        android:title="About"
         android:showAsAction="never"
+        android:title="About"
         app:showAsAction="never"/>
-
     
-    <!--  
+
+    <!--
     <item 
         android:id="@+id/menu_emergency_contacts"
         android:title="Emergency Contacts"
         app:showAsAction="never" />
-        -->
-    
-    
-    <!--  
+    -->
+
+
+    <!--
     <item
         android:id="@+id/menu_gesture_confirmation"
         android:title="Gesture Confirmation"
-        app:showAsAction="never" />-->
-        
+        app:showAsAction="never" />
+    -->
+
 </menu>
