--- a/res/layout/getting_started_dialog.xml
+++ b/res/layout/getting_started_dialog.xml
@@ -20,6 +20,16 @@
             android:text="Getting Started"
             android:textColor="@color/cyan"
             android:textSize="30sp" />
+        
+        <ImageView
+                android:id="@+id/myImageView6"
+                android:layout_width="wrap_content"
+                android:layout_height="10dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:src="@drawable/divider" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -45,10 +55,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
                 android:src="@drawable/menu_settings" />
 
+        
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
@@ -60,7 +72,7 @@
             android:layout_height="wrap_content"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:text="\nStart sharing your location!"
+            android:text="Start sharing your location!"
             android:textColor="@color/cyan"
             android:textIsSelectable="true"
             android:textSize="22sp" />
@@ -79,6 +91,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
                 android:src="@drawable/share_location_button" />
