--- a/res/layout/activity_share_my_location.xml
+++ b/res/layout/activity_share_my_location.xml
@@ -14,10 +14,10 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
         android:layout_marginTop="5dp"
-        android:background="@drawable/button_send"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/button_send_share_location"
         android:onClick="sendMessage"
         android:text="Send"
         android:textColor="#FFFFFFFF"
@@ -31,9 +31,7 @@
         android:layout_alignLeft="@+id/buttonSend"
         android:layout_alignRight="@+id/buttonSend"
         android:layout_below="@+id/selectedContacts"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:background="@drawable/text_border"
+        android:background="@drawable/text_border_share_location"
         android:clickable="true"
         android:ems="20"
         android:hint="Click here to add an additional message"
@@ -54,6 +52,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignRight="@+id/selectedContacts"
         android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
         android:ems="20"
         android:hint="Finding location...Please return to main page"
         android:inputType="textMultiLine|textNoSuggestions|none"
@@ -72,7 +71,7 @@
         android:layout_alignRight="@+id/selectedContacts"
         android:layout_below="@+id/editCompleteMessage"
         android:layout_marginBottom="5dp"
-        android:background="@drawable/button_default_style"
+        android:background="@drawable/button_send_share_location"
         
         android:onClick="getContactList"
         android:text="Select Contacts"
