--- a/res/drawable/text_border_share_location.xml
+++ b/res/drawable/text_border_share_location.xml
@@ -3,7 +3,7 @@
     <item>
       <shape 
         android:shape="rectangle">
-            <stroke android:width="1dp" android:color="#E600E2FF" />
+            <stroke android:width="1dp" android:color="@color/werkorange" />
 
         </shape>
    </item>
@@ -11,7 +11,7 @@
    <item android:top="1dp" android:bottom="1dp"> 
       <shape 
         android:shape="rectangle">
-            <stroke android:width="1dp" android:color="#E600E2FF" />
+            <stroke android:width="1dp" android:color="@color/werkorange" />
         </shape>
    </item>
 
