--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -12,13 +12,16 @@
          android:layout_above="@+id/button_share_my_location"
          android:layout_alignLeft="@+id/button_share_my_location"
          android:layout_alignRight="@+id/button_emergency"
+         android:layout_marginTop="5dp"
+         android:layout_marginBottom="5dp"
          android:gravity="left"
+         android:background="@drawable/rounded_corner_main"
          android:paddingBottom="4dp"
          android:paddingLeft="8dp"
          android:paddingRight="8dp"
          android:paddingTop="4dp"
          android:scrollbars="vertical"
-         android:textColor="#FFFFFFFF"
+         android:textColor="#4AAAA5"
          android:textSize="17sp" />
 
      <fragment
