--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
@@ -37,13 +37,102 @@
         <item name="android:windowBackground">@color/black</item>
     </style>
 
+    <!-- Main Page Theme -->
+    <style name="MainTheme" parent="AppBaseTheme">
+
+        <!-- Action bar customization -->
+        <item name="android:actionBarStyle">@style/MainActionBar</item>
+
+        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+        <item name="android:windowBackground">@color/werkwhite</item>
+
+        <!-- For the resting Spinner style -->
+        <item name="android:spinnerItemStyle">@style/spinnerItemStyle</item>
+
+        <!-- For each individual Spinner list item once clicked on -->
+        <item name="android:spinnerDropDownItemStyle">@style/spinnerDropDownItemStyle</item>
+    </style>
+
+    <!-- Main Page Theme ActionBar -->
+    <style name="MainActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
+        <item name="android:background">#4AAAA5</item>
+        <item name="android:titleTextStyle">@style/MainActionBarTextColor</item>
+    </style>
+
+    <!-- Share My Location Theme -->
+    <style name="ShareMyLocationTheme" parent="AppBaseTheme">
+
+        <!-- Action bar customization -->
+        <item name="android:actionBarStyle">@style/ShareMyLocationActionBar</item>
+
+        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+        <item name="android:editTextStyle">@style/EditTextStyle</item>
+        <item name="android:windowBackground">@color/werkwhite</item>
+
+        <!-- For the resting Spinner style -->
+        <item name="android:spinnerItemStyle">@style/spinnerItemStyle</item>
+
+        <!-- For each individual Spinner list item once clicked on -->
+        <item name="android:spinnerDropDownItemStyle">@style/spinnerDropDownItemStyle</item>
+    </style>
+
+    <!-- ShareMyLocation Theme ActionBar -->
+    <style name="ShareMyLocationActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
+        <item name="android:background">#F2AE72</item>
+        <item name="android:titleTextStyle">@style/ShareMyLocationActionBarTextColor</item>
+    </style>
+
+    <!-- Emergency Theme -->
+    <style name="EmergencyTheme" parent="AppBaseTheme">
+
+        <!-- Action bar customization -->
+        <item name="android:actionBarStyle">@style/EmergencyActionBar</item>
+
+        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+        <item name="android:editTextStyle">@style/EditTextStyle</item>
+        <item name="android:windowBackground">@color/werkwhite</item>
+
+        <!-- For the resting Spinner style -->
+        <item name="android:spinnerItemStyle">@style/spinnerItemStyle</item>
+
+        <!-- For each individual Spinner list item once clicked on -->
+        <item name="android:spinnerDropDownItemStyle">@style/spinnerDropDownItemStyle</item>
+    </style>
+
+    <!-- Emergency Theme ActionBar -->
+    <style name="EmergencyActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
+        <item name="android:background">#E45F56</item>
+        <item name="android:titleTextStyle">@style/EmergencyActionBarTextColor</item>
+    </style>
+
+    <!-- Emergency Title Text Color -->
+    <style name="EmergencyActionBarTextColor" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
+        <item name="android:textColor">@color/werkwhite</item>
+    </style>
+    
+    <!-- Main Activity Title Text Color -->
+    <style name="MainActionBarTextColor" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
+        <item name="android:textColor">@color/werkwhite</item>
+    </style>
+    
+    <!-- ShareMyLocation Title Text Color -->
+    <style name="ShareMyLocationActionBarTextColor" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
+        <item name="android:textColor">@color/werkwhite</item>
+    </style>
+    
+    
+    
+    
+    
+    
+    
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
 
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
         <item name="android:editTextStyle">@style/EditTextStyle</item>
-        <item name="android:windowBackground">@color/black</item>
+        <item name="android:windowBackground">@color/werkwhite</item>
 
         <!-- For the resting Spinner style -->
         <item name="android:spinnerItemStyle">@style/spinnerItemStyle</item>
